scrollbar + modal stop minning

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -449,15 +449,15 @@ $color-red-2: #E03500;
     }
   
     &-right{
-      .btn-change-hero{
-        @include btnGradient(to right, $color-gradient-green-2, #0A0E00, $color-green, 2px 2px 15px rgba(0, 255, 0, 0.8));
-      }
+      // .btn-change-hero{
+      //   @include btnGradient(to right, $color-gradient-green-2, #0A0E00, $color-green, 2px 2px 15px rgba(0, 255, 0, 0.8));
+      // }
   
-      .btn-stop-minning{
-        @include btnGradient(to right, #A20E00, #470036, #E50303, 2px 2px 15px rgba(221, 0, 0, 0.8));
-        padding-left: 20px;
-        padding-right: 20px;
-      }
+      // .btn-stop-minning{
+      //   @include btnGradient(to right, #A20E00, #470036, #E50303, 2px 2px 15px rgba(221, 0, 0, 0.8));
+      //   padding-left: 20px;
+      //   padding-right: 20px;
+      // }
   
       .btn-sell, .btn-transfer, .btn-change-hero, .btn-stop-minning{
         font-size: 18px;
@@ -480,81 +480,81 @@ $color-red-2: #E03500;
         &-box{
           background-color: rgba(0, 0, 0, 0.74);
   
-          .reward-and-status{
-            font-size: 20px;
-            color: $color-green;
-            span{
-              color: white;
-              font-size: 35px;
-              text-shadow: -1px 0 $color-green, 0 1px $color-green, 1px 0 $color-green, 0 -1px $color-green;
-            }
-          }
+          // .reward-and-status{
+          //   font-size: 20px;
+          //   color: $color-green;
+          //   span{
+          //     color: white;
+          //     font-size: 35px;
+          //     text-shadow: -1px 0 $color-green, 0 1px $color-green, 1px 0 $color-green, 0 -1px $color-green;
+          //   }
+          // }
           
-          &-line{
-            @include bgGradient(45deg, $color-gradient-green-1, $color-gradient-green-2);
-            border: 1px solid $color-green;
-            position: relative;
-            height: 34px;
+          // &-line{
+          //   @include bgGradient(45deg, $color-gradient-green-1, $color-gradient-green-2);
+          //   border: 1px solid $color-green;
+          //   position: relative;
+          //   height: 34px;
       
-            .line-percent{
-              background-color: $color-green;
-              width: 50%;
-              height: 100%;
-            }
+          //   .line-percent{
+          //     background-color: $color-green;
+          //     width: 50%;
+          //     height: 100%;
+          //   }
             
-            span{
-              display: inline-block;
-              width: 100%;
-              height: 100%;
-              text-align: center;
-              font-family: Helvetica_Neue;
-              color: white;
-              font-size: 20px;
+          //   span{
+          //     display: inline-block;
+          //     width: 100%;
+          //     height: 100%;
+          //     text-align: center;
+          //     font-family: Helvetica_Neue;
+          //     color: white;
+          //     font-size: 20px;
       
-              position: absolute;
-              z-index: 1;
-              top: 2px;
-            }
-          }
+          //     position: absolute;
+          //     z-index: 1;
+          //     top: 2px;
+          //   }
+          // }
   
-          &-character{
-            font-family: HemiHeadRg_BoldItalic;
-            .img{
-              width: 167px;
-              height: 167px;
-              border: 1px solid #00FFFF;
-              background-image: url('../../public/images/character.jpg');
-              background-position: center;
-              background-size: cover;
-            }
+          // &-character{
+          //   font-family: HemiHeadRg_BoldItalic;
+          //   .img{
+          //     width: 167px;
+          //     height: 167px;
+          //     border: 1px solid #00FFFF;
+          //     background-image: url('../../public/images/character.jpg');
+          //     background-position: center;
+          //     background-size: cover;
+          //   }
   
-            .left{
-              font-size: 22px;
-              color: #00FFFF;
-              p{
-                margin-bottom: 0;
-              }
-              span{
-                color: white;
-              }
-            }
+          //   .left{
+          //     font-size: 22px;
+          //     color: #00FFFF;
+          //     p{
+          //       margin-bottom: 0;
+          //     }
+          //     span{
+          //       color: white;
+          //     }
+          //   }
   
-            .right{
-              .icon{
-                display: flex;
-                align-items: center;
-                img{
-                  display: block;
-                }
-                span{
-                  font-size: 27px;
-                  color: white;
-                  display: block;
-                  margin-left: 10px;
-                }
-              }
-            }
-          }
+          //   .right{
+          //     .icon{
+          //       display: flex;
+          //       align-items: center;
+          //       img{
+          //         display: block;
+          //       }
+          //       span{
+          //         font-size: 27px;
+          //         color: white;
+          //         display: block;
+          //         margin-left: 10px;
+          //       }
+          //     }
+          //   }
+          // }
   
           .content-right-minning-process-text-no-hero{
             font-family: Helvetica_Light_Oblique;
@@ -581,92 +581,6 @@ $color-red-2: #E03500;
           @extend %text-shadow-green;
         }
       }
-    }
-  }
-  
-  .modal-change-hero{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-  
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-  
-    &-frame{
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      // margin: auto;
-    }
-  
-    &-box{
-      @include bgGradient(to bottom, $color-black, $color-gradient-green-black1);
-      width: 733px;
-      margin: auto;
-  
-      border: 1px solid $color-green;
-      box-shadow: 2px 2px 15px $color-green;
-    }
-  
-    &-header{
-      @extend %text-shadow-green;
-      color: white;
-      text-align: center;
-      font-size: 28px;
-      font-family: Progress_Bold_Italic;
-  
-      background-color: $color-gradient-green-2;
-      padding: 10px 0;
-    }
-  
-    &-hero{
-      margin: 0 auto;
-      &-img{
-        background-image: url('../../public/images/character-2.png');
-        background-position: center;
-        background-size: cover;
-        width: 142px;
-        height: 142px;
-        margin-bottom: 30px;
-        opacity: 0.5;
-      }
-      &-text{
-        text-align: center;
-        opacity: 0.5;
-        p{
-          margin-bottom: 0;
-          font-size: 16px;
-          font-family: 'Helvetica_Regular';
-          color: $color-green;
-        }
-        span{
-          color: white;
-        }
-      }
-  
-      &:hover{
-        .modal-change-hero-hero-img, .modal-change-hero-hero-text{
-          opacity: 1;
-        }
-      }
-    }
-  
-    .btn-apply{
-      @include btnGradient(to right, #0A6300, #0A0000, $color-green, 2px 2px 15px rgba(0, 255, 0, 0.8));
-      color: white;
-      padding: 0px 30px;
-      font-size: 30px;
-      margin: 0 auto 30px;
-      display: block;
-    }
-  
-    .modal-notification-text{
-      text-align: center;
-      color: white;
-      font-size: 30px;
-      font-family: Helvetica_Regular;
     }
   }
 }
